# WingPig-MySQL

./: CMakeLists.txt  README  README.md
src/: MySQLWriter.cc  MySQLWriter.h  Plugin.cc  Plugin.h
tests/: btest.cfg
tests/mysql/: show-plugin.bro
